test/corpus/statements.txt
============================
basic let
============================

fn main() {
    let x = 2;
}

-----------------------------

(source_file
    (free_function
        (identifier)
        (block_expression
            (let_statement
                (pattern_identifier
                    (identifier))
                (literal_expression
                    (integer_literal))))))

============================
basic let
============================

fn main() {
    let greeting = 'hello world';
}

-----------------------------

(source_file
    (free_function
        (identifier)
        (block_expression
            (let_statement
                (pattern_identifier
                    (identifier))
                (literal_expression
                    (string_literal))))))
